adding player and basic input handling

--- a/engine.cfg
+++ b/engine.cfg
@@ -1,14 +1,21 @@
-; Engine configuration file.
-; It's best edited using the editor UI and not directly,
-; since the parameters that go here are not all obvious.
-; 
-; Format: 
-;   [section] ; section goes between []
-;   param=value ; assign values to parameters
-
-
 [application]
 
-
 name="Riot_Hotline"
-icon="res://icon.png"
+main_scene="res://Scenes/Rooms/test_room.tscn"
+icon="res://Sprites/icon.png"
+
+[debug]
+
+print_fps=false
+
+[display]
+
+width=1024
+height=600
+
+[input]
+
+game_left=[key(A)]
+game_right=[key(D)]
+game_down=[key(S)]
+game_up=[key(W)]
