state/weapon changes for player

--- a/engine.cfg
+++ b/engine.cfg
@@ -15,6 +15,9 @@ height=600
 
 [input]
 
+wep_set_0=[key(1)]
+wep_set_1=[key(2)]
+wep_set_2=[key(3)]
 game_left=[key(A)]
 game_right=[key(D)]
 game_down=[key(S)]
